--- a/application/views/scripts/formulaire/index.phtml
+++ b/application/views/scripts/formulaire/index.phtml
@@ -15,7 +15,7 @@
                 </div>
 
                 <?php if(count($formulaire['RUBRIQUES']) > 0): ?>
-                    <div class="span7 offset1">
+                    <div class="span6 offset2">
                         <h3>Liste des rubriques</h3>
                     </div>
                 <?php endif ?>
@@ -26,7 +26,7 @@
                     <?php echo $this->form ?>
                 </div>
 
-                <div class="span7 offset1 saved-rubriques">
+                <div class="span6 offset2 saved-rubriques">
                     <?php if(count($formulaire['RUBRIQUES']) > 0): ?>
                         <table class="table table-bordered table-condensed">
                             <thead>
@@ -40,16 +40,22 @@
                                 <?php foreach($formulaire['RUBRIQUES'] as $rubrique): ?>
                                     <tr>
                                         <td><?php echo $rubrique['NOM'] ?></td>
-                                        <td>
+                                        <td id='default-display'>
                                             <?php if($rubrique['DEFAULT_DISPLAY']): ?>
-                                                <p class="text-center">
+                                                <div class="text-center">
                                                     <i class="icon-ok"></i>
-                                                </p>
+                                                </div>
                                             <?php endif ?>
                                         </td>
-                                        <td id="actions">
-                                            <a href="/formulaire/edit-rubrique/rubrique/<?php echo $rubrique['ID_RUBRIQUE'] ?>">Modifier</a>
-                                            <a href="#" data-id="<?php echo $rubrique['ID_RUBRIQUE'] ?>" class="delete-rubrique">Supprimer</a>
+                                        <td id='actions'>
+                                            <div class='text-center'>
+                                                <a href="/formulaire/edit-rubrique/rubrique/<?php echo $rubrique['ID_RUBRIQUE'] ?>">
+                                                    <i title='Modifier' class='icon-pencil'></i>
+                                                </a>
+                                                <a href="" data-id="<?php echo $rubrique['ID_RUBRIQUE'] ?>" class="delete-rubrique">
+                                                    <i title='Supprimer' class='icon-trash'></i>
+                                                </a>
+                                            </div>
                                         </td>
                                     </tr>
                                 <?php endforeach ?>
