--- a/application/views/scripts/couches-cartographiques/add.phtml
+++ b/application/views/scripts/couches-cartographiques/add.phtml
@@ -83,7 +83,7 @@
 		<dd>
 			<select name="FORMAT_COUCHECARTO">
 				<option value="image/png" <?php if(isset($this->row) && $this->row['FORMAT_COUCHECARTO'] == "image/png") echo "selected" ?> >image/png</option>
-				<option value="image/jpg" <?php if(isset($this->row) && $this->row['FORMAT_COUCHECARTO'] == "image/jpg") echo "selected" ?> >image/jpg</option>
+				<option value="image/jpeg" <?php if(isset($this->row) && $this->row['FORMAT_COUCHECARTO'] == "image/jpeg") echo "selected" ?> >image/jpeg</option>
 			</select>
 		</dd>
 
