--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1240,3 +1240,7 @@ dl.champ_effectif_camping dd input {
 #dossierInfos form .btn {
     margin-bottom: 10px;
 }
+
+span > i {
+    cursor: pointer;
+}
