Amélioration du visuel

--- a/application/views/scripts/couches-cartographiques/add-couche-ign.phtml
+++ b/application/views/scripts/couches-cartographiques/add-couche-ign.phtml
@@ -51,7 +51,7 @@
                     form.append('<div class="span1 visibilite-couche"><span><i class="icon-eye-open" title="Couche visible"></i></span></div>')
                     form.append('<input type="hidden" name="TRANSPARENT_COUCHECARTO" value="0">')
 
-                    form.append('<div class="span1"><input type="submit" value="Ajouter"></div>')
+                    form.append('<div class="span1"><input type="submit" class="btn btn-success" value="Ajouter"></div>')
 
                     contentDiv.append('</div>')
                 }
