--- a/application/views/scripts/couches-cartographiques/add-couche-ign.phtml
+++ b/application/views/scripts/couches-cartographiques/add-couche-ign.phtml
@@ -21,6 +21,8 @@
 
     <?php foreach ($this->key_ign as $key): ?>
         formats.forEach(format => {
+            const baseFormat = format.split(' ')[0]
+
             result = getCapabilities('<?= $key ?>', format)
 
             if (result.length > 0) {
@@ -36,17 +38,43 @@
 
                     form.append('<input type="hidden" name="TYPE_COUCHECARTO" value="' + result[i].type + '">')
 
-                    form.append('<div class="span2 nom-couche" title="' + result[i].name + '">' + result[i].name + '</div>')
+                    form.append('<div class="span2" title="' + result[i].name + '">' + result[i].name + '</div>')
                     form.append('<input type="hidden" name="NOM_COUCHECARTO" value="' + result[i].name + '">')
 
-                    form.append('<div class="span3 nom-interne-couche" title="' + result[i].internalName + '">' + result[i].internalName + '</div>')
+                    form.append('<div class="span3" title="' + result[i].internalName + '">' + result[i].internalName + '</div>')
                     form.append('<input type="hidden" name="LAYERS_COUCHECARTO" value="' + result[i].internalName + '">')
 
-                    form.append('<div class="span3 url-couche" title="' + result[i].url + '">' + result[i].url + '</div>')
+                    form.append('<div class="span2 " title="' + result[i].url + '">' + result[i].url + '</div>')
                     form.append('<input type="hidden" name="URL_COUCHECARTO" value="' + result[i].url + '">')
 
-                    form.append('<div class="span1 format-couche">' + result[i].format + '</div>')
-                    form.append('<input type="hidden" name="FORMAT_COUCHECARTO" value="' + result[i].format + '">')
+                    if (baseFormat === 'wms') {
+                        const pngChecked = result[i].format === 'image/png'
+                        const jpegChecked = result[i].format === 'image/jpeg'
+
+                        form.append(
+                            `<div class="span2 text-center">
+                                <select name="FORMAT_COUCHECARTO">
+                                </select>
+                            </div>`
+                        )
+
+                        const select = $(row.selector + ' select[name="FORMAT_COUCHECARTO"')
+
+                        if (pngChecked === true) {
+                            select.append(
+                                `<option value="image/png" selected>image/png</option>
+                                <option value="image/jpeg">image/jpeg</option>`
+                            )
+                        } else if (jpegChecked === true) {
+                            select.append(
+                                `<option value="image/png">image/png</option>
+                                    <option value="image/jpeg" selected>image/jpeg</option>`
+                            )
+                        }
+                    } else {
+                        form.append('<div class="span2 text-center">' + result[i].format + '</div>')
+                        form.append('<input type="hidden" name="FORMAT_COUCHECARTO" value="' + result[i].format + '">')
+                    }
 
                     form.append('<div class="span1 visibilite-couche"><span><i class="icon-eye-open" title="Couche visible"></i></span></div>')
                     form.append('<input type="hidden" name="TRANSPARENT_COUCHECARTO" value="0">')
