--- a/application/views/scripts/couches-cartographiques/add-couche-ign.phtml
+++ b/application/views/scripts/couches-cartographiques/add-couche-ign.phtml
@@ -1,3 +1,9 @@
+<div class='pull-right btn-group'>
+    <a class='btn' href="<?php echo $this->url(array('action' => 'list')) ?>">Revenir sur la liste des couches cartographiques</a>
+</div>
+
+<h3>Ajout d'une couche cartographique IGN</h3>
+
 <div class="accordion" id="ign-accordion">
     <?php foreach ($this->key_ign as $index => $ignKey): ?>
         <div class="accordion-group">
