--- a/application/views/scripts/couches-cartographiques/change-order.phtml
+++ b/application/views/scripts/couches-cartographiques/change-order.phtml
@@ -18,5 +18,8 @@
         </tbody>
     </table>
 
-    <button type='submit' class='btn btn-success pull-right'>Sauvegarder</button>
+    <div class='btn-group pull-right'>
+        <a class='btn' href="<?php echo $this->url(array('action' => 'list')) ?>">Revenir sur la liste des couches cartographiques</a>
+        <button type='submit' class='btn btn-success'>Sauvegarder</button>
+    </div>
 </form>
