ecriture donnee + ajout admin

--- a/application/layouts/dossier.phtml
+++ b/application/layouts/dossier.phtml
@@ -32,11 +32,10 @@
 
     <?php if($this->idTypeDossier === 1) :?>
         <li class="avisEtDerogation" style="position:relative">
-            <a>
+            <a href=<?= "/dossier/avis-et-derogations/id/".$this->idDossier?>>
                 <i class="icon-file icon-black">
                 </i> 
                     Avis et dérogation
-                
             </a>
             <div style="
                 height:25px;
