--- a/application/views/scripts/dossier/results/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/results/avis-et-derogations.phtml
@@ -5,7 +5,7 @@
                     border-radius: 15px;
                     padding: 1em;
                         ">
-    <a href="#" class="close pull-right" data-dismiss="alert" data-id='<?= $this->ID_BLOCK ?>' >&times;</a>
+    <a href="#" class="close pull-right" data-dismiss="alert" data-id='<?php echo($this->ID_DOSSIER."/avis-derogation/".$this->ID_AVIS_DEROGATION)  ?>' >&times;</a>
     <h1 style="text-align:center"><?=$this->TITRE?></h1>    
     <div class="row-fluid">
         <div class="span6">
@@ -14,7 +14,11 @@
             <p>Avis : <?= $this->IS_FAVORABLE === 1 ? 'Favorable':'Défavorable'?></p>
         </div>
         <div class="span6">
-            <p>Avis/Dérogation levé(e): <a href="monUrl.comAvecLaDate">monUrl.comAvecLaDate</a></p>
+            <p>Avis/Dérogation levé(e):
+                <a href='/dossier/index/id/<?= $this->ID_DOSSIER_LIE ?>'>
+                     <?=$this->ID_DOSSIER_LIE ? $this->ID_DOSSIER_LIE: '' ?>
+                </a>
+            </p>
             
             <div style="display:flex">
                 <label for="affHistorique">Afficher l'historique de l'établissement</label>
@@ -22,16 +26,35 @@
                     id="scales" 
                     name="affHistorique" 
                     disabled
-                    <?= ($this->afficherHistorique == true ? 'checked' : '')?> 
+                    <?= ($this->DISPLAY_HISTORIQUE == true ? 'checked' : '')?> 
                 >
             </div>
         </div>
     </div>
    
     <div class="pull-right btn-group">
-        <a href=<?= "/dossier/avis-et-derogations-edit/id/".$this->ID_DOSSIER."/avis-derogation/".$this->ID_AVIS_DEROGATION ?> class="icon-pencil icon-black"></a>
+        <a 
+            class="icon-pencil icon-black"
+            href=<?= "/dossier/avis-et-derogations-edit/id/".$this->ID_DOSSIER."/avis-derogation/".$this->ID_AVIS_DEROGATION ?>
+            >
+        </a>
     </div>
 
 </div>
 
 
+<script>
+        $(".close").click(function (event) { 
+            event.preventDefault()
+            console.log("/dossier/avis-et-derogations/id/"+$(this).attr('data-id'))
+           $.ajax({
+               type: "delete",
+               url: "/dossier/avis-et-derogations/id/"+$(this).attr('data-id'),
+               success: function (response) {
+                   
+               }
+           }); 
+        });
+         
+    
+</script>
