--- a/application/views/scripts/dossier/avis-et-derogations-edit.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations-edit.phtml
@@ -1,1 +1,77 @@
-<?php echo $this->partialLoop("dossier/results/avis-et-derogations-edit.phtml", $this->arrayAvisDerogations); ?>
+<h4 class="h4_subtitle">Avis / Dérogation <strong> ID BLOCK : <?= $this->ID_AVIS_DEROGATION?></strong></h4>
+<form  class="container-fluid" method="post">
+    <div class="btn-group pull-right">
+        <a class="btn" href=<?php echo ("/dossier/avis-et-derogations/id/". $this->ID_DOSSIER)?>>Annuler modification</a>
+        <input type="submit" class="btn btn-success" href=<?php echo ("/dossier/avis-et-derogations/id/". $this->ID_DOSSIER)?> value="Sauvegarder">
+    </div>
+    <div class="row">
+        <p class="span2">Type</p>
+        <!--Generation liste des avis-->
+        <select name="TYPE_AVIS_DEROGATIONS" required="required">
+            <option value="1" <?= 1 === $this->TYPE_AVIS_DEROGATIONS ? 'selected' : '' ?> >
+                Avis
+            </option>
+            <option value="2" <?= 2 === $this->TYPE_AVIS_DEROGATIONS ? 'selected' : '' ?> >
+                Dérogations
+            </option>
+        </select>
+    </div>
+    <div class="row">
+        <p class="span2">Titre</p>
+        <input name="TITRE" class="span4" type="text" placeholder="votre titre" required="required" value='<?= $this->TITRE ?>' >
+    </div>
+    <div class="row">
+        <p>Informations</p>
+        <textarea name="INFORMATIONS" class="tinyarea" required="required"><?= $this->INFORMATIONS ?></textarea>
+    </div>
+    <div class="row">
+        <p class="span2">Avis</p>
+        <select name="IS_FAVORABLE" class="span4" required="required">       
+            <option value="1" <?php echo $this->IS_FAVORABLE === 1 ? 'selected':''  ?>  >Favorable</option>
+            <option  value="0" <?php echo  $this->IS_FAVORABLE === 0 ? 'selected':''?> >Défavorable</option>
+        </select>
+    </div>
+    <div class="row">
+        <h2 class="h4_subtitle span3">Avis/Dérogation levé(e):</h2>
+    </div>   
+
+    <div class="row">
+        <?= $this->partial('dossier/results/avisderogation/dossier.phtml', ['DOSSIERS_ETAB' => $this->listDossierEtab, 'ID_DOSSIER_LIE' => $this->ID_DOSSIER_LIE]); ?>
+    </div>
+
+    <div class="row" style="display:flex">
+        <input  type="checkbox" 
+                id="DISPLAY_HISTORIQUE" 
+                name="DISPLAY_HISTORIQUE" 
+                required="required"
+                <?php echo ($this->DISPLAY_HISTORIQUE == true ? 'checked' : '')?> 
+        >
+        <label for="DISPLAY_HISTORIQUE">Afficher l'historique de l'établissement</label>
+    </div>
+
+
+
+
+</form>
+
+
+<script type='text/javascript'>
+    tinymce.init({
+        selector: '.tinyarea',
+        height: 200,
+        menubar: true,
+        statusbar: false,
+        plugins: [
+            'advlist autolink lists link image charmap print preview anchor',
+            'searchreplace visualblocks code fullscreen',
+            'insertdatetime media table contextmenu paste code'
+        ],
+        toolbar: 'insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link',
+        content_css: [
+            '//fast.fonts.net/cssapi/e6dc9b99-64fe-4292-ad98-6974f93cd2a2.css',
+            '//www.tinymce.com/css/codepen.min.css'
+        ]
+    });
+
+
+</script>
