--- a/application/views/scripts/dossier/avis-et-derogations.phtml
+++ b/application/views/scripts/dossier/avis-et-derogations.phtml
@@ -1,14 +1,14 @@
-<form class="form-horizontal span8">
+<form class="form-horizontal span8" method="post">
 <input class="btn btn-success pull-right" type='submit' value='ajouter avis/dérogations'/>
   <div class="control-group">
     <label class="control-label" for="inputTitre">Titre</label>
     <div class="controls">
-      <input type="text" id="inputTitre" placeholder="Titre" required="required">
+      <input name="TITRE" type="text" id="inputTitre" placeholder="Titre" required="required">
     </div>
   </div>
   <div class="control-group">
     <label class="control-label" for="inputType">Type</label>
-    <select class="controls" name="inputType" required="required">
+    <select class="controls" name="TYPE_AVIS_DEROGATIONS" required="required">
             <option class="controls" value=<?= 1 ?>>
                 Avis
             </option>
@@ -20,21 +20,53 @@
   <div class="control-group">
     <label class="control-label" for="inputInformations">Informations</label>
     <div class="controls">
-      <input type="text" id="inputInformations" placeholder="Informations" required="required">
+      <textarea name="INFORMATIONS" class="tinyarea"><?= $this->INFORMATIONS ?></textarea>
     </div>
   </div>
   <div class="control-group">
-    <label class="control-label" for="inputAvis">Avis</label>
-    <div class="controls">
-      <input type="text" id="inputAvis" placeholder="Avis" required="required">
-    </div>
+    <p class="control-label">Avis</p>
+    <select class="controls" name="IS_FAVORABLE" class="span4">       
+        <option class="controls" value="1" > Favorable</option>
+        <option class="controls" value="0" > Défavorable</option>
+    </select>
   </div>
+
   <div class="control-group">
-    <label class="control-label" for="inputAvisDerogation">AvisDerogation</label>
+    <p class="control-label">Avis/Dérogation levé(e):</p>
+    <?= $this->partial('dossier/results/avisderogation/dossier.phtml',['DOSSIERS_ETAB' => $this->listDossierEtab, 'ID_DOSSIER_LIE' => $this->ID_DOSSIER_LIE]); ?>
+  </div>
+
+  <div class="control-group">
+    <label class="control-label"for="DISPLAY_HISTORIQUE">Afficher l'historique de l'établissement</label>
     <div class="controls">
-      <input type="text" id="inputAvisDerogation" placeholder="Tire" required="required">
-    </div>
+    <input   type="checkbox" 
+                id="DISPLAY_HISTORIQUE" 
+                name="DISPLAY_HISTORIQUE" 
+                <?= ($this->DISPLAY_HISTORIQUE == true ? 'checked' : '')?> 
+    >
+    </div>        
   </div>
 </form>
 
-<?php echo $this->partialLoop("dossier/results/avis-et-derogations.phtml", $this->arrayAvisDerogations); ?>
+<?= $this->partialLoop("dossier/results/avis-et-derogations.phtml", $this->arrayAvisDerogations); ?>
+
+<script type='text/javascript'>
+    tinymce.init({
+        selector: '.tinyarea',
+        height: 200,
+        menubar: true,
+        statusbar: false,
+        plugins: [
+            'advlist autolink lists link image charmap print preview anchor',
+            'searchreplace visualblocks code fullscreen',
+            'insertdatetime media table contextmenu paste code'
+        ],
+        toolbar: 'insertfile undo redo | styleselect | bold italic | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | link',
+        content_css: [
+            '//fast.fonts.net/cssapi/e6dc9b99-64fe-4292-ad98-6974f93cd2a2.css',
+            '//www.tinymce.com/css/codepen.min.css'
+        ]
+    });
+
+
+</script>
